--- a/Weekday Function.ipynb
+++ b/Weekday Function.ipynb
@@ -1,6 +1,48 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales= pd.read_csv(r\"C:\\Users\\Zoe Mercury\\Desktop\\Iron\\Week 7 Project\\Kaggle Challenge\\train.csv\")\n",
+    "\n",
+    "def sales_weekday(df):\n",
+    "    df.drop(columns=['Date','Unnamed: 0'], axis=1, inplace=True)\n",
+    "    dummy= pd.get_dummies(df)\n",
+    "    return dummy\n",
+    "\n",
+    "sales_weekday(sales)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
