new function for dummy dates

--- a/Weekday Function.ipynb
+++ b/Weekday Function.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales= pd.read_csv(r\"C:\\Users\\Zoe Mercury\\Desktop\\Iron\\Week 7 Project\\Kaggle Challenge\\train.csv\")\n",
+    "# Deleting 'Date' column and turning 'State_holiday' into dummies\n",
+    "\n",
+    "df= pd.read_csv(r\"C:\\Users\\Zoe Mercury\\Desktop\\Iron\\Week 7 Project\\Kaggle Challenge\\train.csv\")\n",
     "\n",
     "def sales_weekday(df):\n",
     "    df.drop(columns=['Date','Unnamed: 0'], axis=1, inplace=True)\n",
@@ -21,7 +23,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Turning the 'Date' column into dummies\n",
+    "\n",
+    "df= pd.read_csv(r\"C:\\Users\\Zoe Mercury\\Desktop\\Iron\\Week 7 Project\\Kaggle Challenge\\train.csv\")\n",
+    "\n",
+    "def date_dummies(df):\n",
+    "    dummy_sales= pd.get_dummies(df)\n",
+    "    dummy_sales.drop(columns='Unnamed: 0', axis=1, inplace=True)\n",
+    "    return dummy_sales\n",
+    "\n",
+    "date_dummies(df)"
+   ]
   }
  ],
  "metadata": {
