Classified stores and Zero-Sales Removal functions

--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -35,6 +35,42 @@
     "\n",
     "date_dummies(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating categories for 'Store ID'\n",
+    "\n",
+    "df= pd.read_csv(r\"C:\\Users\\Zoe Mercury\\Desktop\\Iron\\Week 7 Project\\Kaggle Challenge\\train.csv\")\n",
+    "\n",
+    "def store_category(df):\n",
+    "    dfcut=pd.cut(df['Sales'], 6, labels=['Incredibly Low',\"Very Low\",\"Low\", \"Medium\",\"High\",'Very High'])\n",
+    "    df['Sales Quantity']= dfcut\n",
+    "    df.drop(columns=[\"Store_ID\"], axis=1, inplace=True)\n",
+    "    dummies= pd.get_dummies(df)\n",
+    "    return dummies\n",
+    "\n",
+    "store_category(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change dates to ordinals\n",
+    "def change_to_ordinal(s):\n",
+    "    date = datetime.strptime(s, '%Y-%m-%d')\n",
+    "    return date.toordinal()\n",
+    "\n",
+    "# drop the rows with column 'open' = 0\n",
+    "to_drop = df_dates[df_dates['Open']==0]\n",
+    "df_dates.drop(to_drop.index,axis=0,inplace=True)"
+   ]
   }
  ],
  "metadata": {
