ML.py file created

--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -6,6 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Linear_reg_train(X_train, y_train):\n",
+    "    # Takes the \n",
+    "    from sklearn.linear_model import LinearRegression\n",
+    "    \n",
+    "\n",
+    "    # initialize model\n",
+    "    model = LinearRegression(n_jobs=-1)\n",
+    "\n",
+    "    # fit model\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # check accuracy\n",
+    "    return model.score(X_train, y_train)"
+   ]
   }
  ],
  "metadata": {
