--- a/ML.ipynb
+++ b/ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Index(['Store_ID', 'Day_of_week', 'Nb_customers_on_day', 'Open', 'Promotion',\n       'State_holiday', 'School_holiday', 'Sales'],\n      dtype='object')"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "sales.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +87,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Day_of_week</th>\n      <th>Nb_customers_on_day</th>\n      <th>Open</th>\n      <th>Promotion</th>\n      <th>School_holiday</th>\n      <th>State_holiday_0</th>\n      <th>State_holiday_a</th>\n      <th>State_holiday_b</th>\n      <th>State_holiday_c</th>\n      <th>Sales Quantity_Incredibly Low</th>\n      <th>Sales Quantity_Very Low</th>\n      <th>Sales Quantity_Low</th>\n      <th>Sales Quantity_Medium</th>\n      <th>Sales Quantity_High</th>\n      <th>Sales Quantity_Very High</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>317021</th>\n      <td>5</td>\n      <td>540</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>534640</th>\n      <td>4</td>\n      <td>946</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>226122</th>\n      <td>2</td>\n      <td>2535</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>621710</th>\n      <td>6</td>\n      <td>352</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>391752</th>\n      <td>2</td>\n      <td>637</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 91
+     "execution_count": 4
     }
    ],
    "source": [
@@ -87,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +358,7 @@
   "kernelspec": {
    "display_name": "Python 3.8.2 32-bit",
    "language": "python",
-   "name": "python_defaultSpec_1597404557158"
+   "name": "python_defaultSpec_1597416239376"
   },
   "language_info": {
    "codemirror_mode": {
@@ -352,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
